@@ -1,0 +1,1 @@
+ConfigurationTemplate_readOOoCalcFile
